parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIOS
    COMILLAS
    EOL
    GLOBAL
    RANGE
    STRINGVAL

Grammar

Rule 0     S' -> class
Rule 1     resultado -> class
Rule 2     class -> CLASS CID classparams class2 body
Rule 3     class2 -> DOSPUNTOS ID PARIZQ vars2 PARDER
Rule 4     class2 -> empty
Rule 5     classparams -> PARIZQ classparams2 PARDER
Rule 6     classparams2 -> vars
Rule 7     classparams2 -> empty
Rule 8     bloque -> LLAVEIZQ estatuto bloque2 LLAVEDER
Rule 9     bloque2 -> RETURN bloque3
Rule 10    bloque2 -> empty
Rule 11    bloque3 -> expresion
Rule 12    bloque3 -> empty
Rule 13    varcte -> ID
Rule 14    varcte -> INTNUM
Rule 15    varcte -> FLOATNUM
Rule 16    varcte -> BOOLVAL
Rule 17    varcte -> STRING
Rule 18    varcte -> ID CORCHIZQ varcte CORCHDER
Rule 19    varcte -> ID PUNTO ID
Rule 20    varcte -> ID PARIZQ expresion2 PARDER
Rule 21    expresion -> megaexp
Rule 22    expresionr -> COMA expresion expresionr
Rule 23    expresionr -> empty
Rule 24    expresion2 -> expresion expresionr
Rule 25    expresion2 -> empty
Rule 26    oplog -> MAYORQUE exp
Rule 27    oplog -> MENORQUE exp
Rule 28    oplog -> DIFERENTE exp
Rule 29    oplog -> MAYOROIGUAL exp
Rule 30    oplog -> MENOROIGUAL exp
Rule 31    oplog -> IGUALIGUAL exp
Rule 32    oplog -> empty
Rule 33    superexp -> exp oplog
Rule 34    megaexp -> superexp megaexpr
Rule 35    megaexpr -> AND superexp megaexpr
Rule 36    megaexpr -> OR superexp megaexpr
Rule 37    megaexpr -> empty
Rule 38    vars -> vars3 tipo vars2 COLON
Rule 39    vars -> vars3 tipo LIST vars2 COLON
Rule 40    varsr -> COMA ID varsr
Rule 41    varsr -> empty
Rule 42    vars2 -> ID varsr
Rule 43    vars3 -> PRIVATE
Rule 44    vars3 -> empty
Rule 45    estatuto -> asignacion estatuto
Rule 46    estatuto -> condicion estatuto
Rule 47    estatuto -> escritura estatuto
Rule 48    estatuto -> for estatuto
Rule 49    estatuto -> while estatuto
Rule 50    estatuto -> when estatuto
Rule 51    estatuto -> llamada estatuto
Rule 52    estatuto -> empty
Rule 53    asignacion -> ID asignacion3 IGUAL asignacion2 COLON
Rule 54    asignacion2 -> expresion
Rule 55    asignacion2 -> CORCHDER expresion asignacion2r CORCHIZQ
Rule 56    asignacion2 -> READ PARIZQ STRING PARDER
Rule 57    asignacion2r -> COMA expresion asignacion2r
Rule 58    asignacion2r -> empty
Rule 59    asignacion3 -> CORCHIZQ expresion CORCHDER
Rule 60    asignacion3 -> PUNTO ID
Rule 61    asignacion3 -> empty
Rule 62    condicion -> IF condicion2 condicionr estatutor
Rule 63    condicion2 -> PARIZQ expresion PARDER bloque
Rule 64    condicionr -> ELSE IF condicion2
Rule 65    condicionr -> empty
Rule 66    estatutor -> ELSE bloque
Rule 67    estatutor -> empty
Rule 68    escritura -> WRITE PARIZQ esc1 esc2 PARDER
Rule 69    esc1 -> expresion
Rule 70    esc1 -> STRING
Rule 71    esc2 -> COMA esc1 esc2
Rule 72    esc2 -> empty
Rule 73    tipo -> INT
Rule 74    tipo -> FLOAT
Rule 75    tipo -> BOOL
Rule 76    tipo -> STRING
Rule 77    tipo -> CID
Rule 78    factor -> PARIZQ expresion PARDER
Rule 79    factor -> factor2 varcte varcter
Rule 80    terminor -> POR factor terminor
Rule 81    terminor -> SOBRE factor terminor
Rule 82    terminor -> empty
Rule 83    termino -> factor terminor
Rule 84    exp -> termino expr
Rule 85    expr -> MAS termino expr
Rule 86    expr -> MENOS termino expr
Rule 87    expr -> empty
Rule 88    varcter -> COMA varcte varcter
Rule 89    varcter -> empty
Rule 90    factor2 -> MAS
Rule 91    factor2 -> MENOS
Rule 92    factor2 -> empty
Rule 93    for -> FOR PARIZQ ID IN for2 PARDER bloque
Rule 94    for2 -> ID
Rule 95    for2 -> range
Rule 96    range -> INTNUM PUNTOSRANGO INTNUM
Rule 97    while -> WHILE PARIZQ expresion PARDER bloque
Rule 98    when -> WHEN PARIZQ expresion PARDER LLAVEIZQ when2 LLAVEDER
Rule 99    when2 -> varcte varcter FLECHITA bloque when2
Rule 100   when2 -> IN range FLECHITA bloque when2
Rule 101   when2 -> ELSE FLECHITA bloque when2
Rule 102   when2 -> empty
Rule 103   fun -> vars3 FUN ID PARIZQ fun2 PARDER fun3 funbody
Rule 104   fun2 -> tipo ID funparamr
Rule 105   fun2 -> empty
Rule 106   funparamr -> COMA tipo ID funparamr
Rule 107   funparamr -> empty
Rule 108   fun3 -> DOSPUNTOS tipo
Rule 109   fun3 -> empty
Rule 110   funbody -> LLAVEIZQ opc1 opc2 bloque2 LLAVEDER
Rule 111   opc1 -> vars multvarsdecl
Rule 112   opc1 -> empty
Rule 113   opc2 -> estatuto
Rule 114   opc2 -> empty
Rule 115   body -> LLAVEIZQ body2 funr MAIN PARIZQ PARDER bloque LLAVEDER
Rule 116   body2 -> vars multvarsdecl
Rule 117   body2 -> empty
Rule 118   multvarsdecl -> vars
Rule 119   multvarsdecl -> empty
Rule 120   funr -> fun funr
Rule 121   funr -> empty
Rule 122   llamada -> ID PARIZQ expresion expresionr PARDER
Rule 123   llamada -> empty
Rule 124   empty -> <empty>

Terminals, with rules where they appear

AND                  : 35
BOOL                 : 75
BOOLVAL              : 16
CID                  : 2 77
CLASS                : 2
COLON                : 38 39 53
COMA                 : 22 40 57 71 88 106
COMENTARIOS          : 
COMILLAS             : 
CORCHDER             : 18 55 59
CORCHIZQ             : 18 55 59
DIFERENTE            : 28
DOSPUNTOS            : 3 108
ELSE                 : 64 66 101
EOL                  : 
FLECHITA             : 99 100 101
FLOAT                : 74
FLOATNUM             : 15
FOR                  : 93
FUN                  : 103
GLOBAL               : 
ID                   : 3 13 18 19 19 20 40 42 53 60 93 94 103 104 106 122
IF                   : 62 64
IGUAL                : 53
IGUALIGUAL           : 31
IN                   : 93 100
INT                  : 73
INTNUM               : 14 96 96
LIST                 : 39
LLAVEDER             : 8 98 110 115
LLAVEIZQ             : 8 98 110 115
MAIN                 : 115
MAS                  : 85 90
MAYOROIGUAL          : 29
MAYORQUE             : 26
MENOROIGUAL          : 30
MENORQUE             : 27
MENOS                : 86 91
OR                   : 36
PARDER               : 3 5 20 56 63 68 78 93 97 98 103 115 122
PARIZQ               : 3 5 20 56 63 68 78 93 97 98 103 115 122
POR                  : 80
PRIVATE              : 43
PUNTO                : 19 60
PUNTOSRANGO          : 96
RANGE                : 
READ                 : 56
RETURN               : 9
SOBRE                : 81
STRING               : 17 56 70 76
STRINGVAL            : 
WHEN                 : 98
WHILE                : 97
WRITE                : 68
error                : 

Nonterminals, with rules where they appear

asignacion           : 45
asignacion2          : 53
asignacion2r         : 55 57
asignacion3          : 53
bloque               : 63 66 93 97 99 100 101 115
bloque2              : 8 110
bloque3              : 9
body                 : 2
body2                : 115
class                : 1 0
class2               : 2
classparams          : 2
classparams2         : 5
condicion            : 46
condicion2           : 62 64
condicionr           : 62
empty                : 4 7 10 12 23 25 32 37 41 44 52 58 61 65 67 72 82 87 89 92 102 105 107 109 112 114 117 119 121 123
esc1                 : 68 71
esc2                 : 68 71
escritura            : 47
estatuto             : 8 45 46 47 48 49 50 51 113
estatutor            : 62
exp                  : 26 27 28 29 30 31 33
expr                 : 84 85 86
expresion            : 11 22 24 54 55 57 59 63 69 78 97 98 122
expresion2           : 20
expresionr           : 22 24 122
factor               : 80 81 83
factor2              : 79
for                  : 48
for2                 : 93
fun                  : 120
fun2                 : 103
fun3                 : 103
funbody              : 103
funparamr            : 104 106
funr                 : 115 120
llamada              : 51
megaexp              : 21
megaexpr             : 34 35 36
multvarsdecl         : 111 116
opc1                 : 110
opc2                 : 110
oplog                : 33
range                : 95 100
resultado            : 
superexp             : 34 35 36
termino              : 84 85 86
terminor             : 80 81 83
tipo                 : 38 39 104 106 108
varcte               : 18 79 88 99
varcter              : 79 88 99
vars                 : 6 111 116 118
vars2                : 3 38 39
vars3                : 38 39 103
varsr                : 40 42
when                 : 50
when2                : 98 99 100 101
while                : 49

Parsing method: LALR

state 0

    (0) S' -> . class
    (2) class -> . CLASS CID classparams class2 body

    CLASS           shift and go to state 2

    class                          shift and go to state 1

state 1

    (0) S' -> class .



state 2

    (2) class -> CLASS . CID classparams class2 body

    CID             shift and go to state 3


state 3

    (2) class -> CLASS CID . classparams class2 body
    (5) classparams -> . PARIZQ classparams2 PARDER

    PARIZQ          shift and go to state 5

    classparams                    shift and go to state 4

state 4

    (2) class -> CLASS CID classparams . class2 body
    (3) class2 -> . DOSPUNTOS ID PARIZQ vars2 PARDER
    (4) class2 -> . empty
    (124) empty -> .

    DOSPUNTOS       shift and go to state 7
    LLAVEIZQ        reduce using rule 124 (empty -> .)

    class2                         shift and go to state 6
    empty                          shift and go to state 8

state 5

    (5) classparams -> PARIZQ . classparams2 PARDER
    (6) classparams2 -> . vars
    (7) classparams2 -> . empty
    (38) vars -> . vars3 tipo vars2 COLON
    (39) vars -> . vars3 tipo LIST vars2 COLON
    (124) empty -> .
    (43) vars3 -> . PRIVATE
    (44) vars3 -> . empty

    PARDER          reduce using rule 124 (empty -> .)
    INT             reduce using rule 124 (empty -> .)
    FLOAT           reduce using rule 124 (empty -> .)
    BOOL            reduce using rule 124 (empty -> .)
    STRING          reduce using rule 124 (empty -> .)
    CID             reduce using rule 124 (empty -> .)
    PRIVATE         shift and go to state 13

    classparams2                   shift and go to state 9
    vars                           shift and go to state 10
    empty                          shift and go to state 11
    vars3                          shift and go to state 12

state 6

    (2) class -> CLASS CID classparams class2 . body
    (115) body -> . LLAVEIZQ body2 funr MAIN PARIZQ PARDER bloque LLAVEDER

    LLAVEIZQ        shift and go to state 15

    body                           shift and go to state 14

state 7

    (3) class2 -> DOSPUNTOS . ID PARIZQ vars2 PARDER

    ID              shift and go to state 16


state 8

    (4) class2 -> empty .

    LLAVEIZQ        reduce using rule 4 (class2 -> empty .)


state 9

    (5) classparams -> PARIZQ classparams2 . PARDER

    PARDER          shift and go to state 17


state 10

    (6) classparams2 -> vars .

    PARDER          reduce using rule 6 (classparams2 -> vars .)


state 11

    (7) classparams2 -> empty .
    (44) vars3 -> empty .

    PARDER          reduce using rule 7 (classparams2 -> empty .)
    INT             reduce using rule 44 (vars3 -> empty .)
    FLOAT           reduce using rule 44 (vars3 -> empty .)
    BOOL            reduce using rule 44 (vars3 -> empty .)
    STRING          reduce using rule 44 (vars3 -> empty .)
    CID             reduce using rule 44 (vars3 -> empty .)


state 12

    (38) vars -> vars3 . tipo vars2 COLON
    (39) vars -> vars3 . tipo LIST vars2 COLON
    (73) tipo -> . INT
    (74) tipo -> . FLOAT
    (75) tipo -> . BOOL
    (76) tipo -> . STRING
    (77) tipo -> . CID

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    BOOL            shift and go to state 21
    STRING          shift and go to state 22
    CID             shift and go to state 23

    tipo                           shift and go to state 18

state 13

    (43) vars3 -> PRIVATE .

    INT             reduce using rule 43 (vars3 -> PRIVATE .)
    FLOAT           reduce using rule 43 (vars3 -> PRIVATE .)
    BOOL            reduce using rule 43 (vars3 -> PRIVATE .)
    STRING          reduce using rule 43 (vars3 -> PRIVATE .)
    CID             reduce using rule 43 (vars3 -> PRIVATE .)
    FUN             reduce using rule 43 (vars3 -> PRIVATE .)


state 14

    (2) class -> CLASS CID classparams class2 body .

    $end            reduce using rule 2 (class -> CLASS CID classparams class2 body .)


state 15

    (115) body -> LLAVEIZQ . body2 funr MAIN PARIZQ PARDER bloque LLAVEDER
    (116) body2 -> . vars multvarsdecl
    (117) body2 -> . empty
    (38) vars -> . vars3 tipo vars2 COLON
    (39) vars -> . vars3 tipo LIST vars2 COLON
    (124) empty -> .
    (43) vars3 -> . PRIVATE
    (44) vars3 -> . empty

  ! shift/reduce conflict for PRIVATE resolved as shift
    MAIN            reduce using rule 124 (empty -> .)
    FUN             reduce using rule 124 (empty -> .)
    INT             reduce using rule 124 (empty -> .)
    FLOAT           reduce using rule 124 (empty -> .)
    BOOL            reduce using rule 124 (empty -> .)
    STRING          reduce using rule 124 (empty -> .)
    CID             reduce using rule 124 (empty -> .)
    PRIVATE         shift and go to state 13

  ! PRIVATE         [ reduce using rule 124 (empty -> .) ]

    body2                          shift and go to state 24
    vars                           shift and go to state 25
    empty                          shift and go to state 26
    vars3                          shift and go to state 12

state 16

    (3) class2 -> DOSPUNTOS ID . PARIZQ vars2 PARDER

    PARIZQ          shift and go to state 27


state 17

    (5) classparams -> PARIZQ classparams2 PARDER .

    DOSPUNTOS       reduce using rule 5 (classparams -> PARIZQ classparams2 PARDER .)
    LLAVEIZQ        reduce using rule 5 (classparams -> PARIZQ classparams2 PARDER .)


state 18

    (38) vars -> vars3 tipo . vars2 COLON
    (39) vars -> vars3 tipo . LIST vars2 COLON
    (42) vars2 -> . ID varsr

    LIST            shift and go to state 29
    ID              shift and go to state 30

    vars2                          shift and go to state 28

state 19

    (73) tipo -> INT .

    LIST            reduce using rule 73 (tipo -> INT .)
    ID              reduce using rule 73 (tipo -> INT .)
    LLAVEIZQ        reduce using rule 73 (tipo -> INT .)


state 20

    (74) tipo -> FLOAT .

    LIST            reduce using rule 74 (tipo -> FLOAT .)
    ID              reduce using rule 74 (tipo -> FLOAT .)
    LLAVEIZQ        reduce using rule 74 (tipo -> FLOAT .)


state 21

    (75) tipo -> BOOL .

    LIST            reduce using rule 75 (tipo -> BOOL .)
    ID              reduce using rule 75 (tipo -> BOOL .)
    LLAVEIZQ        reduce using rule 75 (tipo -> BOOL .)


state 22

    (76) tipo -> STRING .

    LIST            reduce using rule 76 (tipo -> STRING .)
    ID              reduce using rule 76 (tipo -> STRING .)
    LLAVEIZQ        reduce using rule 76 (tipo -> STRING .)


state 23

    (77) tipo -> CID .

    LIST            reduce using rule 77 (tipo -> CID .)
    ID              reduce using rule 77 (tipo -> CID .)
    LLAVEIZQ        reduce using rule 77 (tipo -> CID .)


state 24

    (115) body -> LLAVEIZQ body2 . funr MAIN PARIZQ PARDER bloque LLAVEDER
    (120) funr -> . fun funr
    (121) funr -> . empty
    (103) fun -> . vars3 FUN ID PARIZQ fun2 PARDER fun3 funbody
    (124) empty -> .
    (43) vars3 -> . PRIVATE
    (44) vars3 -> . empty

    MAIN            reduce using rule 124 (empty -> .)
    FUN             reduce using rule 124 (empty -> .)
    PRIVATE         shift and go to state 13

    funr                           shift and go to state 31
    fun                            shift and go to state 32
    empty                          shift and go to state 33
    vars3                          shift and go to state 34

state 25

    (116) body2 -> vars . multvarsdecl
    (118) multvarsdecl -> . vars
    (119) multvarsdecl -> . empty
    (38) vars -> . vars3 tipo vars2 COLON
    (39) vars -> . vars3 tipo LIST vars2 COLON
    (124) empty -> .
    (43) vars3 -> . PRIVATE
    (44) vars3 -> . empty

  ! shift/reduce conflict for PRIVATE resolved as shift
    MAIN            reduce using rule 124 (empty -> .)
    FUN             reduce using rule 124 (empty -> .)
    INT             reduce using rule 124 (empty -> .)
    FLOAT           reduce using rule 124 (empty -> .)
    BOOL            reduce using rule 124 (empty -> .)
    STRING          reduce using rule 124 (empty -> .)
    CID             reduce using rule 124 (empty -> .)
    PRIVATE         shift and go to state 13

  ! PRIVATE         [ reduce using rule 124 (empty -> .) ]

    vars                           shift and go to state 35
    multvarsdecl                   shift and go to state 36
    empty                          shift and go to state 37
    vars3                          shift and go to state 12

state 26

    (117) body2 -> empty .
    (44) vars3 -> empty .

    PRIVATE         reduce using rule 117 (body2 -> empty .)
    MAIN            reduce using rule 117 (body2 -> empty .)
    FUN             reduce using rule 117 (body2 -> empty .)
    INT             reduce using rule 44 (vars3 -> empty .)
    FLOAT           reduce using rule 44 (vars3 -> empty .)
    BOOL            reduce using rule 44 (vars3 -> empty .)
    STRING          reduce using rule 44 (vars3 -> empty .)
    CID             reduce using rule 44 (vars3 -> empty .)


state 27

    (3) class2 -> DOSPUNTOS ID PARIZQ . vars2 PARDER
    (42) vars2 -> . ID varsr

    ID              shift and go to state 30

    vars2                          shift and go to state 38

state 28

    (38) vars -> vars3 tipo vars2 . COLON

    COLON           shift and go to state 39


state 29

    (39) vars -> vars3 tipo LIST . vars2 COLON
    (42) vars2 -> . ID varsr

    ID              shift and go to state 30

    vars2                          shift and go to state 40

state 30

    (42) vars2 -> ID . varsr
    (40) varsr -> . COMA ID varsr
    (41) varsr -> . empty
    (124) empty -> .

    COMA            shift and go to state 42
    COLON           reduce using rule 124 (empty -> .)
    PARDER          reduce using rule 124 (empty -> .)

    varsr                          shift and go to state 41
    empty                          shift and go to state 43

state 31

    (115) body -> LLAVEIZQ body2 funr . MAIN PARIZQ PARDER bloque LLAVEDER

    MAIN            shift and go to state 44


state 32
